--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
 language: java
-script: mvn clean compile package
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script: mvn test -B
