--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
 
     <groupId>com.dataheaps</groupId>
     <artifactId>aspectrest</artifactId>
-    <version>0.1.12</version>
+    <version>0.1.12-SNAPSHOT</version>
 
     <scm>
-        <connection>scm:git:ssh://git@github.com:pelatimtt/aspectrest.git</connection>
-      <tag>aspectrest-0.1.12</tag>
+        <connection>scm:git:ssh://git@github.com/pelatimtt/aspectrest.git</connection>
   </scm>
 
     <dependencies>
