--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,10 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
                         <version>2.5.3</version>
+                        <configuration>
+                            <remoteTagging>false</remoteTagging>
+                            <suppressCommitBeforeTag>false</suppressCommitBeforeTag>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
